fixed some small issues

--- a/Project_Lybrate/blt.html
+++ b/Project_Lybrate/blt.html
@@ -114,6 +114,12 @@
             cursor:pointer;
             margin-right: 300px;
         }
+        a {
+            cursor: pointer;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
         body {
             margin: 0px;
             background-color: rgba(238,238,238,255);
