adjusted a few small things

--- a/Project_Lybrate/home2.html
+++ b/Project_Lybrate/home2.html
@@ -112,7 +112,7 @@
                 </a>
                 <a ng-href="/viewcart" target="_self" aria-label="cart-logo" ga-event="Header-Homepage">
     
-                    <ly-svg-icon p="cart-icon" class="ly-svg--red ly-svg--xl ng-isolate-scope"><svg
+                    <ly-svg-icon p="cart-icon" style="color: rgb(177, 3, 3);" class="ly-svg--red ly-svg--xl ng-isolate-scope"><svg
                             xmlns="http://www.w3.org/2000/svg" height="100%" width="100%"
                             preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                             <path ng-attr-d="{{$root.icons[ctrl.p]}}"
