--- a/Project_Lybrate/doctorSignup.html
+++ b/Project_Lybrate/doctorSignup.html
@@ -49,7 +49,8 @@
         }
         #lyb img {
             margin-left: 100px;
-            width: 9%;
+            width: 8%;
+            height: 100%;
         }
         #ques {
             font-size: 14px;
