made a few corrections

--- a/Project_Lybrate/blt.html
+++ b/Project_Lybrate/blt.html
@@ -871,33 +871,31 @@
             </div>
             <div>
                 <h2>Frequently Asked Questions</h2>
-                <p onclick="p1()" id="0">Why Should I book lab tests through Lybrate?</p>
-                <div id="giveText1">
-                    
-                </div>
-                <p onclick="p2()" id="0" class="faqs">Do i get option of pathology labs to choose from?</p>
+                <p onclick="p1()" id="0" class="faqs">Why Should I book lab tests through Lybrate?</p>
+                <div id="giveText1"></div>
+                <p onclick="p2()" id="0" class="faqs">Do I get option of pathology labs to choose from?</p>
                 <div id="giveText2"></div>
                 <p onclick="p3()" id="0" class="faqs">Are labs on Lybrate certified?</p>
                 <div id="giveText3"></div>
-                <p onclick="p4()" id="0" class="faqs">is it necessary to register before making the lab test booking?</p>
+                <p onclick="p4()" id="0" class="faqs">Is it necessary to register before making the lab test booking?</p>
                 <div id="giveText4"></div>
                 <p onclick="p5()" id="0" class="faqs">How does home sample collection work?</p>
                 <div id="giveText5"></div>
-                <p onclick="p6()" id="0" class="faqs">Can i get the sample collection done from my office?</p>
+                <p onclick="p6()" id="0" class="faqs">Can I get the sample collection done from my office?</p>
                 <div id="giveText6"></div>
                 <p onclick="p7()" id="0" class="faqs">What are timing for sample collection?</p>
                 <div id="giveText7"></div>
-                <p onclick="p8()" id="0" class="faqs">Can i reschedule or cancel the appointment, are there any change?</p>
+                <p onclick="p8()" id="0" class="faqs">Can I reschedule or cancel the appointment, are there any change?</p>
                 <div id="giveText8"></div>
                 <p onclick="p9()" id="0" class="faqs">What are different payment option?</p>
                 <div id="giveText9"></div>
-                <p onclick="p10()" id="0" class="faqs">Can i pay for test at the time of sample collection?</p>
+                <p onclick="p10()" id="0" class="faqs">Can I pay for test at the time of sample collection?</p>
                 <div id="giveText10"></div>
                 <p onclick="p11()" id="0" class="faqs">Do you deliver test reoprts over email?</p>
                 <div id="giveText11"></div>
-                <p onclick="p12()" id="0" class="faqs">When will i getr the test reoprts?</p>
+                <p onclick="p12()" id="0" class="faqs">When will I getr the test reoprts?</p>
                 <div id="giveText12"></div>
-                <p onclick="p13()" id="0" class="faqs">How will i receive the reports, for my tests?</p>
+                <p onclick="p13()" id="0" class="faqs">How will I receive the reports, for my tests?</p>
                 <div id="giveText13"></div>
             </div>
         </div>
