--- a/Project_Lybrate/consultOnline.html
+++ b/Project_Lybrate/consultOnline.html
@@ -543,7 +543,7 @@
             document.getElementById("stDiv").appendChild(p);
         }
         function goToHome() {
-            window.location.href = "lybrate_doctors.html";
+            window.location.href = "home2.html";
         }
         function goToUserLogin() {
             window.location.href = "userLogin.html";
