--- a/Project_Lybrate/blt.html
+++ b/Project_Lybrate/blt.html
@@ -144,6 +144,26 @@
             max-width: 100%;
             position: relative;
         }
+        .bottomThreeBox button {
+            width: 148px !important;
+            font-weight: 550;
+            margin-right: 15px;
+            cursor: pointer;
+        }
+        .bottomThreeBox button:hover {
+            width: 148px !important;
+            font-weight: 550;
+            background-color: rgb(109, 3, 3);
+        }
+        #srch {
+            border: 1px solid rgba(200,37,6,255);
+            background-color: rgba(200,37,6,255);
+            cursor: pointer;
+        }
+        #srch:hover {
+            border: 1px solid rgb(128, 26, 5);
+            background-color: rgb(128, 26, 5);
+        }
         /*#homeContTop > .homeContDivOne{
             display: flex;
             width: 100%;
@@ -695,7 +715,7 @@
                 <form id="bookLab">
                     <input type="text" id="testName" placeholder="Type test names and select from option to search">
                     <input type="text" id="city" placeholder="Enter City">
-                    <button type="submit">Search</button>
+                    <button type="submit" id="srch">Search</button>
                 </form>
                 <div class="logoCont">
                     <div>
@@ -718,7 +738,7 @@
         <div id="testContThree">
             <div>
                 <h2>Aarogyam 1.2 Advanced (70 Tests)</h2>
-                <p>TFT</p>
+                <p></p>
                 <div class="boxP">
                     <p>You save 43%</p>
                     <p>₹2100</p>
