--- a/Project_Lybrate/home2.html
+++ b/Project_Lybrate/home2.html
@@ -15,7 +15,7 @@
         <div id="headerStrip">
             <div id="lisu" onclick="goToUserLogin()">Login/Sign-up</div>
             <div onclick="goToHealthFeed()">Health Feed</div>
-            <div onclick="goToDoctorSignup()">For Doctors</div>
+            <div onclick="goToDoctorPage()">For Doctors</div>
             <div >Get the App</div>
         </div>
         <div id="homeContTop">
@@ -1104,6 +1104,9 @@
         }
         function goToConsultOnline() {
             window.location.href="consultOnline.html";
+        }
+        function goToDoctorPage() {
+            window.location.href = "doctorPage.html";
         }
         function goToUserLogin() {
             window.location.href = "userLogin.html"
