--- a/Project_Lybrate/longAns.html
+++ b/Project_Lybrate/longAns.html
@@ -134,7 +134,7 @@
         <script src="https://kit.fontawesome.com/afe9d36b7f.js" crossorigin="anonymous"></script>
         <div id="status">
             <p>Get the App</p>
-            <p onclick="goToDoctorSignup()">For Doctors</p>
+            <p onclick="goToDoctorPage()">For Doctors</p>
             <p onclick="goToHealthFeed()">Health Feed</p>
         </div>
         <div id="lyb">
@@ -372,9 +372,11 @@
                     function goToHealthFeed() {
                         window.location.href = "hf.html";
                     }
-
                     function goToDoctorSignup() {
                         window.location.href = "doctorSignup.html";
+                    }
+                    function goToDoctorPage() {
+                        window.location.href = "doctorPage.html";
                     }
                     function goToAskQuestions() {
                         window.location.href = "askQuestions.html";
