--- a/Project_Lybrate/onlineProfile.html
+++ b/Project_Lybrate/onlineProfile.html
@@ -210,7 +210,7 @@
             <img onclick="goToHome()" src="https://nu.lybcdn.com/img/lybrate-logo-new.png" />
             <div id="header">
                 <p>Download App</p>
-                <p onclick="goToDoctorLogin()">For Doctors</p>
+                <p onclick="goToDoctorPage()">For Doctors</p>
             </div>
         </div>
         <div id="docProfile">
@@ -306,6 +306,9 @@
         }
         function goToDoctorLogin() {
             window.location.href = "doctorLogin.html";
+        }
+        function goToDoctorPage() {
+            window.location.href = "doctorPage.html";
         }
         function goToUserLogin() {
             window.location.href = "userLogin.html";
