--- a/Project_Lybrate/userLogin.html
+++ b/Project_Lybrate/userLogin.html
@@ -151,7 +151,7 @@
     <body>
         <div id="status">
             <p>Get the App</p>
-            <p onclick="goToDoctorLogin()">For Doctors</p>
+            <p onclick="goToDoctorPage()">For Doctors</p>
             <p onclick="goToHealthFeed()">Health Feed</p>
         </div>
         <div id="lyb">
@@ -295,8 +295,8 @@
         function goToBookAppointment() {
             window.location.href = "lybrate_doctors.html";
         }
-        function goToDoctorLogin() {
-            window.location.href = "doctorLogin.html";
+        function goToDoctorPage() {
+            window.location.href = "doctorPage.html";
         }
         function goToHome() {
             window.location.href = "home2.html";
