--- a/Project_Lybrate/userSignup.html
+++ b/Project_Lybrate/userSignup.html
@@ -151,7 +151,7 @@
     <body>
         <div id="status">
             <p>Get the App</p>
-            <p onclick="goToDoctorLogin()">For Doctors</p>
+            <p onclick="goToDoctorPage()">For Doctors</p>
             <p onclick="goToHealthFeed()">Health Feed</p>
         </div>
         <div id="lyb">
@@ -318,8 +318,8 @@
         function goToBookLabTest() {
             window.location.href = "blt.html";
         }
-        function goToDoctorLogin() {
-            window.location.href = "doctorLogin.html";
+        function goToDoctorPage() {
+            window.location.href = "doctorPage.html";
         }
         function goToLogin() {
             window.location.href = "userLogin.html";
