--- a/Project_Lybrate/lybrate_doctors.html
+++ b/Project_Lybrate/lybrate_doctors.html
@@ -228,7 +228,7 @@
         <script src="https://kit.fontawesome.com/afe9d36b7f.js" crossorigin="anonymous"></script>
         <div id="status">
             <p>Get the App</p>
-            <p onclick="goToDoctorSignup()">For Doctors</p>
+            <p onclick="goToDoctorPage()">For Doctors</p>
             <p onclick="goToHealthFeed()">Health Feed</p>
         </div>
         <div id="lyb">
@@ -932,11 +932,11 @@
         function goToHealthFeed() {
             window.location.href = "hf.html";
         }
+        function goToDoctorPage() {
+            window.location.href = "doctorPage.html";
+        }
         function goToBookLabTest() {
             window.location.href = "blt.html";
-        }
-        function goToDoctorSignup() {
-            window.location.href = "doctorSignup.html";
         }
         function goToAskQuestions() {
             localStorage.removeItem('tabQue');
