--- a/Project_Lybrate/clinicAppointment.html
+++ b/Project_Lybrate/clinicAppointment.html
@@ -117,14 +117,15 @@
             background-color: rgb(243, 241, 241);
         }
         #bookingConfirmed {
-            width: 70%;
+            width: 75%;
             height: 100px;
             background-color: white;
             margin: 30px auto;
             padding: 15px;
             text-align: center;
             border-radius: 1px;
-            border: 1px solid rgb(151, 29, 4);
+            border: 1px solid rgb(36, 6, 0);
+            box-shadow: 0 0 17px rgba(33,33,33,.2); 
         }
         #bookingConfirmed img {
             width: 100px;
