--- a/Project_Lybrate/doctorLogin.html
+++ b/Project_Lybrate/doctorLogin.html
@@ -18,6 +18,7 @@
             margin-bottom: 40px;
             padding: 15px;
             background-color: white;
+            box-shadow: 0px 0px 3px black;
         }
         #lyb img {
             margin-left: 100px;
