--- a/Project_Lybrate/newQuestions.html
+++ b/Project_Lybrate/newQuestions.html
@@ -12,6 +12,7 @@
             height: 50px;
             background-color: white;
             margin: 0px;
+            box-shadow: 0px 0px 3px black;
         }
         #index > div {
             display: flex;
@@ -39,6 +40,7 @@
             width: 70%;
             background-color: white;
             padding: 10px;
+            box-shadow: 0 0 17px rgba(33,33,33,.2);
         }
         #questions h4 {
             width: 100%;
