--- a/Project_Lybrate/onlineProfile.html
+++ b/Project_Lybrate/onlineProfile.html
@@ -155,7 +155,8 @@
             padding: 15px;
             text-align: center;
             border-radius: 1px;
-            border: 1px solid rgb(151, 29, 4);
+            border: 1px solid rgb(22, 3, 0);
+            box-shadow: 0 0 17px rgba(33,33,33,.2); 
         }
         #bookingConfirmed img {
             width: 100px;
