--- a/Project_Lybrate/hf.html
+++ b/Project_Lybrate/hf.html
@@ -215,7 +215,7 @@
         </div>
     </div>
     <div id="hfFlexBox">
-        <div id="hfLybrateGold">
+        <div onclick="goToGoldMembership()" id="hfLybrateGold">
             <div>
                <img src="https://assets.lybrate.com/swan/patmem/LybrateGold_Color.png" alt="">
             </div>
@@ -490,6 +490,9 @@
     }
     function consultOnline() {
         window.location.href="consultOnline.html";
+    }
+    function goToGoldMembership() {
+        window.location.href = "goldMembership.html";
     }
     function goToDoctorPage() {
         window.location.href = "doctorPage.html";
