--- a/Project_Lybrate/longAns.html
+++ b/Project_Lybrate/longAns.html
@@ -126,6 +126,21 @@
         font-size: 13px;
         margin: 0px !important;
     }
+    @media (max-width: 800px) {
+            #lyb > img {
+            cursor:pointer;
+            margin-right: 15px;
+            width: 15%;
+            height: 80%;
+            padding: 5px;
+            }
+            #lyb p {
+                font-size: 10px;
+            }
+            #lyb > div {
+                margin: 5px;
+            }
+        }
         
 
         </style>
@@ -186,7 +201,7 @@
                 </div>
             </div>
             <div id="hfFlexBox">
-                <div id="hfLybrateGold">
+                <div onclick="goToGoldMembership()" id="hfLybrateGold">
                     <div>
                         <img src="https://assets.lybrate.com/swan/patmem/LybrateGold_Color.png" alt="">
                     </div>
@@ -344,6 +359,9 @@
                     }
                     function consultOnline() {
                         window.location.href = "consultOnline.html";
+                    }
+                    function goToGoldMembership() {
+                        window.location.href = "goldMembership.html";
                     }
                     function goToSignup() {
                         window.location.href = "userSignup.html"
